Backport to Minecraft 1.20.5-1.20.6